--- a/datacamp_data-analyst/0_initial-notes/Manipulating and Joining Data with Pandas.ipynb
+++ b/datacamp_data-analyst/0_initial-notes/Manipulating and Joining Data with Pandas.ipynb
@@ -9,9 +9,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed1d148e",
+   "metadata": {},
+   "source": [
+    "Prerequisites"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4563bdd8",
+   "execution_count": 74,
+   "id": "197fdbc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,156 +27,58 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "b11a52f5",
+   "cell_type": "markdown",
+   "id": "a620c8df",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Legendary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Bulbasaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>45</td>\n",
-       "      <td>49</td>\n",
-       "      <td>49</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ivysaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>60</td>\n",
-       "      <td>62</td>\n",
-       "      <td>63</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Venusaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>80</td>\n",
-       "      <td>82</td>\n",
-       "      <td>83</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>VenusaurMega Venusaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>80</td>\n",
-       "      <td>100</td>\n",
-       "      <td>123</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Charmander</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>39</td>\n",
-       "      <td>52</td>\n",
-       "      <td>43</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    Name Type 1  HP  Attack  Defense  Legendary\n",
-       "0              Bulbasaur  Grass  45      49       49      False\n",
-       "1                Ivysaur  Grass  60      62       63      False\n",
-       "2               Venusaur  Grass  80      82       83      False\n",
-       "3  VenusaurMega Venusaur  Grass  80     100      123      False\n",
-       "4             Charmander   Fire  39      52       43      False"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "pokemon = pd.read_csv(\"C:\\\\Users\\\\sawcon\\\\_datacamp\\\\datasets\\\\pokemon-data.csv\", usecols=['Name', 'Type 1', 'HP', 'Attack', 'Defense', 'Legendary'])\n",
-    "pokemon.head()"
+    "## Dataframes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "ae95620b",
+   "execution_count": null,
+   "id": "13e602a7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Water       112\n",
-       "Normal       98\n",
-       "Grass        70\n",
-       "Bug          69\n",
-       "Psychic      57\n",
-       "Fire         52\n",
-       "Rock         44\n",
-       "Electric     44\n",
-       "Ghost        32\n",
-       "Dragon       32\n",
-       "Ground       32\n",
-       "Dark         31\n",
-       "Poison       28\n",
-       "Steel        27\n",
-       "Fighting     27\n",
-       "Ice          24\n",
-       "Fairy        17\n",
-       "Flying        4\n",
-       "Name: Type 1, dtype: int64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5c9c182",
+   "metadata": {},
    "source": [
-    "pokemon['Type 1'].value_counts()"
+    "## Aggregating Dataframes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8f5f6ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf2afbea",
+   "metadata": {},
+   "source": [
+    "## Slicing and Indexing Dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6b564e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "8e416086",
    "metadata": {},
    "source": [
-    "## Dataframes\n",
-    "## Aggregating Dataframes\n",
-    "## Slicing and Indexing Dataframes\n",
     "## Creating and Visualizing Dataframes"
    ]
   },
@@ -190,29 +100,67 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6ec757a",
+   "metadata": {},
+   "source": [
+    "## Data Merging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dca84bc7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0fb6426",
+   "metadata": {},
+   "source": [
+    "## Merging with Different Types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff58355c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24e9d3ce",
+   "metadata": {},
+   "source": [
+    "## Advanced Merging and Concatinating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90acdadd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "f110058a",
    "metadata": {},
    "source": [
-    "## Data Merging\n",
-    "## Merging with Different Types\n",
-    "## Advanced Merging and Concatinating\n",
     "## Merging Ordered and Time-Series Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a30e3f73",
+   "execution_count": null,
+   "id": "9f451786",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def animal_crackers(text):\n",
-    "    text_list = text.split(' ')\n",
-    "    if text_list[0][0] == text_list[1][0]:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
-   ]
+   "source": []
   }
  ],
  "metadata": {
